Bing/examples/good/11-func.bing
int mm() {
    return 3;
}

void main() {
    println(mm());
}