Bing/examples/bad/11-func.bing
int mm() {
    return True;
}

void main() {
    println(mm());
}